--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,47 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
 
-# chromeTemp
-/~
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
 
-# dependencies
-/node_modules
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# OS generated files #
+######################
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Another Specials #
+####################
+*.yml
+*.cfg
+.htaccess
+*.config
+node_modules/
+.vscode/
+.env
