--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "German Settino",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.16",
     "sequelize-cli": "^6.4.1"
   }
 }
