--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "budget-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
+    "start": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "German Settino",
@@ -15,7 +16,7 @@
     "sequelize": "^6.21.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16",
+    "nodemon": "^1.3.3",
     "sequelize-cli": "^6.4.1"
   }
 }
